# projects

./: README.md  readme.txt
Testing/: test.c
bebop_control/: package.xml
bebop_control/src/: bebop.launch  bebop_controller.py  bebop_logger.py  bebop_setup.launch  bebop_states.py
bebop_ws/devel/: .catkin  .rosinstall  setup.sh
bebop_ws/devel/include/bebop_driver/: BebopArdrone3Config.h
bebop_ws/devel/include/bebop_msgs/: Ardrone3AccessoryStateConnectedAccessories.h  Ardrone3AntiflickeringStateelectricFrequencyChanged.h  Ardrone3AntiflickeringStatemodeChanged.h  Ardrone3CameraStateOrientation.h  Ardrone3CameraStateVelocityRange.h  Ardrone3CameraStatedefaultCameraOrientation.h  Ardrone3CameraStatedefaultCameraOrientationV2.h  Ardrone3MediaRecordStateVideoStateChanged.h  Ardrone3MediaRecordStateVideoStateChangedV2.h  Ardrone3MediaStreamingStateVideoEnableChanged.h  Ardrone3MediaStreamingStateVideoStreamModeChanged.h  Ardrone3NetworkStateAllWifiAuthChannelChanged.h  Ardrone3NetworkStateAllWifiScanChanged.h  Ardrone3NetworkStateWifiScanListChanged.h  Ardrone3PilotingStateAirSpeedChanged.h  Ardrone3PilotingStateAttitudeChanged.h  Ardrone3PilotingStateAutoTakeOffModeChanged.h  Ardrone3PilotingStateFlatTrimChanged.h  Ardrone3PilotingStateFlyingStateChanged.h  Ardrone3PilotingStateLandingStateChanged.h  Ardrone3PilotingStateNavigateHomeStateChanged.h  Ardrone3PilotingStatePositionChanged.h  Ardrone3PilotingStateSpeedChanged.h  (+19 more)
bebop_ws/install/: _setup_util.py
bebop_ws/src/bebop_control/: CMakeLists.txt  package.xml
bebop_ws/src/bebop_control/src/: bebop_control.py
(+61 files in other folders)
